--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
         <h1>Boston Glass</h1>
         <ul id="nav">
-            <li><a href='BusinessWebsite.html'>Home</a></li>
+            <li><a href='index.html'>Home</a></li>
             <li><a href='BWeb_services.html'>Services</a></li>
             <li><a href='BWeb_contact.html'>Contact</a></li>
         </ul>
