--- a/BWeb_services.html
+++ b/BWeb_services.html
@@ -15,7 +15,7 @@
     <body>
         <h1>Services</h1>
         <ul id="nav">
-            <li><a href='BusinessWebsite.html'>Home</a></li>
+            <li><a href='index.html'>Home</a></li>
             <li><a href='BWeb_services.html'>Services</a></li>
             <li><a href='BWeb_contact.html'>Contact</a></li>
         </ul>
